--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       background-color: #111;
       color: #fff;
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px 10px;
       margin: 0;
@@ -50,20 +50,16 @@
 </head>
 <body>
 
-  <h2>🎯 Join Telegram Channel to Earn Coins in Claim Zone</h2>
-  <p>🚫 Never leave the channel without getting reward.</p>
+  <h2>🎯 Join Telegram Bots to Earn Coins</h2>
+  <p>🚫 Never leave the channel without claiming your reward.</p>
 
   <div class="box">
-    <a class="bot-link" href="https://t.me/Reward_king_pay_bot?start=6562017842" target="_blank">
-      📦 Bot 1 Link ✅
-    </a>
-    <a class="bot-link" href="https://t.me/infinitycashs_bot?start=6562017842" target="_blank">
-      📦 Bot 2 Link ✅
-    </a>
+    <a class="bot-link" href="https://t.me/Reward_king_pay_bot?start=6562017842" target="_blank">📦 Bot 1 Link ✅</a>
+    <a class="bot-link" href="https://t.me/infinitycashs_bot?start=6562017842" target="_blank">📦 Bot 2 Link ✅</a>
 
-    <p>✅ All channels joined! Enter your Telegram ID:</p>
-    <form action="https://formsubmit.co/el/newumo" method="POST">
-      <input type="text" name="telegram_id" placeholder="Your Telegram ID" required>
+    <p>✅ After joining, enter your Telegram ID below:</p>
+    <form action="https://formsubmit.co/el/gotavothis" method="POST">
+      <input type="text" name="telegram_username" placeholder="Your Telegram Username" required>
       <input type="hidden" name="_captcha" value="false">
       <button type="submit">🎁 Claim 5 Coins</button>
     </form>
