--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,7 @@
     body {
       background-color: #111;
       color: #fff;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       text-align: center;
       padding: 20px 10px;
       margin: 0;
@@ -50,17 +50,22 @@
 </head>
 <body>
 
-  <h2>🎯 Join Telegram Bots to Earn Coins</h2>
-  <p>🚫 Never leave the channel without claiming your reward.</p>
+  <h2>🎯 Join Telegram Channel to Earn Coins in Claim Zone</h2>
+  <p>🚫 Never leave the channel without getting reward.</p>
 
   <div class="box">
-    <a class="bot-link" href="https://t.me/Reward_king_pay_bot?start=6562017842" target="_blank">📦 Bot 1 Link ✅</a>
-    <a class="bot-link" href="https://t.me/infinitycashs_bot?start=6562017842" target="_blank">📦 Bot 2 Link ✅</a>
+    <a class="bot-link" href="https://t.me/Reward_king_pay_bot?start=6562017842" target="_blank">
+      📦 Bot 1 Link ✅
+    </a>
+    <a class="bot-link" href="https://t.me/infinitycashs_bot?start=6562017842" target="_blank">
+      📦 Bot 2 Link ✅
+    </a>
 
-    <p>✅ After joining, enter your Telegram ID below:</p>
+    <p>✅ All channels joined! Enter your Telegram ID:</p>
     <form action="https://formsubmit.co/el/gotavothis" method="POST">
-      <input type="text" name="telegram_username" placeholder="Your Telegram Username" required>
+      <input type="text" name="telegram_username" placeholder="@yourtelegram" required>
       <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_template" value="box">
       <button type="submit">🎁 Claim 5 Coins</button>
     </form>
   </div>
